fixed text alignment on mobile width

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -102,6 +102,9 @@
       h5 {
         text-align: left;
       }
+      h6 {
+        text-align: left;
+      }
     }
   }
 
